# tigen

./: .gitignore  CMakeLists.txt  Makefile  README.md  basic_idea.md  tags
apps/: CMakeLists.txt  main.cpp
extras_lib/: CMakeLists.txt
extras_lib/inc/extras/: curses_util.hpp  exception_util.hpp  extra_util.hpp
extras_lib/src/: curses_util.cpp  exception_util.cpp  extra_util.cpp
inc/: class_time.hpp  course.hpp  data.hpp  department.hpp  driver.hpp  genetic_algo.hpp  instructor.hpp  population.hpp  room.hpp  schedule.hpp  sec_class.hpp
inc/extras/: curses_util.hpp  extra_util.hpp
src/: class_time.cpp  course.cpp  data.cpp  department.cpp  driver.cpp  genetic_algo.cpp  instructor.cpp  main.cpp  population.cpp  room.cpp  schedule.cpp  sec_class.cpp
src/extras/: curses_util.cpp  exception_util.cpp  extra_util.cpp
tigen/: todo.md
tigen/inc/: class_time.hpp  course.hpp  data.hpp  department.hpp  genetic_algo.hpp  instructor.hpp  population.hpp  room.hpp  schedule.hpp  sec_class.hpp
tigen/inc/extras/: extra_util.hpp
tigen/src/: class_time.cpp  course.cpp  data.cpp  department.cpp  genetic_algo.cpp  instructor.cpp  main.cpp  population.cpp  room.cpp  schedule.cpp  sec_class.cpp
tigen/src/extras/: extra_util.cpp
tigen_lib/: CMakeLists.txt
tigen_lib/inc/elib/: course.hpp  department.hpp  sec_class.hpp
tigen_lib/inc/glib/: data.hpp  driver.hpp  genetic_algo.hpp  population.hpp  schedule.hpp
tigen_lib/src/: class_time.cpp  course.cpp  data.cpp  department.cpp  driver.cpp  genetic_algo.cpp  instructor.cpp  population.cpp  room.cpp  schedule.cpp  sec_class.cpp
